--- a/.github/workflows/weixin-push-on-time.yml
+++ b/.github/workflows/weixin-push-on-time.yml
@@ -7,11 +7,10 @@ on:
   workflow_dispatch:
   schedule:
     # 每天国际时间 23:30 运行, 即北京时间 7:30 运行
-    - cron: '30 23 * * *'
-    
+    - cron: "30 8,12,16 * * *"
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,20 +19,19 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    # 添加定时任务指定运行分支 默认为master
-    - uses: actions/checkout@v3
-      with:
-          ref: 'master'
-          
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run dev --if-present
-    env: 
+      # 添加定时任务指定运行分支 默认为master
+      - uses: actions/checkout@v3
+        with:
+          ref: "master"
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm ci
+      - run: npm run dev --if-present
+    env:
       APP_ID: ${{secrets.APP_ID}}
       APP_SECRET: ${{secrets.APP_SECRET}}
       USER_INFO: ${{secrets.USER_INFO}}
-
